changed div.DTE div.DTE_Form_Error in custom.css to fix error message that was getting truncated
Included if check in .on('initEdit', function(e, node, data) as when clicking from one row to another was causing undefined error
Changed .on( 'click', 'tbody td:not(.child), tbody span.dtr-data', function (e .... to work on tableData object and datatableEditor.inline( this ,{ submit: 'allIfChanged' to datatableEditor.inline( tableData.cell(this).index() ,{ submit: 'allIfChanged',

--- a/gdma2-web/src/main/resources/public/main/css/custom.css
+++ b/gdma2-web/src/main/resources/public/main/css/custom.css
@@ -260,11 +260,13 @@ table.table-condensed {
 }
 
 div.DTE div.DTE_Form_Error {
-	white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 80%;
-    font-size:12px;
+	font-size: 12px;
+    width: 240px;
+    position: absolute;
+    background: #fff;
+    padding: 5px;
+    border: 1px solid #b11f1f;
+    border-radius: 5px;
 }
 
 .buttons-row {
